CICO-87288 & CICO-87448: Mobile PMS; Journal - Fixed scrolling issues where last row of totals was not visible - Fixed wrong label reported in CICO-87448

--- a/stylesheets/less/mobile/screens/16.journal.less
+++ b/stylesheets/less/mobile/screens/16.journal.less
@@ -7,7 +7,7 @@
 .journal-header-print {
     background-color: rgba(0,0,0,.1);
     padding: 10px;
-    margin-bottom: 10px;
+    height: 60px;
 
     li {
         font-size: 14px;
@@ -30,8 +30,12 @@
 }
 
 .journal-content {
-    padding: 0 10px;
-    height: 100%;
+    position: relative;
+    .calc-height(100, 60);
+
+    .wrapper {
+        padding: 10px;
+    }
 
     h3 {
         font-size: 18px;
@@ -115,7 +119,7 @@
 
             &:nth-child(4) {
                 &:before {
-                    content: 'Scoring';
+                    content: 'Closing';
                 }
             }
         }
